fix z-index for media import background

--- a/src/css/create.scss
+++ b/src/css/create.scss
@@ -192,7 +192,7 @@ a {
 	right: -20px;
 	top: 65px;
 	width: 100%;
-	z-index: 1;
+	z-index: 7;
 }
 
 .animate-show {
